# instagram-cli

./: .env  .env.example  .gitignore  README.md  install.sh  pyproject.toml
docs/: architecture.md  cli.md  library.md  mcp.md  troubleshooting.md
examples/: custom_agent.py
instagram_cli/: __init__.py  client.py  config.py  git_updates.py  hiker_api.py  limits.py  main.py  mcp_server.py  openrouter_agent.py  ops.py  repl.py
instagram_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: export_top_media_likers.py
