[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "instagram-cli"
version = "0.1.0"
description = "Interactive Instagram stats and analysis CLI powered by HikerAPI and OpenRouter."
requires-python = ">=3.10"
dependencies = [
  "mcp[cli]>=1,<2",
  "openai>=1.40.0",
  "python-dotenv>=1.0.1",
  "requests>=2.31.0",
  "rich>=13.7.0",
]

[project.scripts]
instagram = "instagram_cli.main:main"
instagram-mcp = "instagram_cli.mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["instagram_cli*"]
